chore: TAO Community Edition 2026.05.0-rc3 Release
upstream commit: 353e79371eca4873edc5978a1e92e7f228b6090f

upstream repository: git@github.com:oat-sa/tao-content-service.git
