# src/infrastructure/routers/files.router.js
@@ -9,6 +9,7 @@ const { errorHandler } = require('../middleware/error.middleware');
 // const bearerToken = require('express-bearer-token');
 const DownloadController = require('../../application/controllers/download.controller');
 const MoveController = require('../../application/controllers/move.controller');
+const DeleteController = require('../../application/controllers/delete.controller');
 const express = require('express');
 const router = express.Router();
 
@@ -18,12 +19,15 @@ const router = express.Router();
 
 const downloadController = new DownloadController(serviceContainer.uploadService);
 const moveController = new MoveController(serviceContainer.moveService);
+const deleteController = new DeleteController(serviceContainer.uploadService);
 
 router.get('/stream/:tenantId/:storagePath(*)', downloadController.streamFile.bind(downloadController));
 
 router.get('/:virtualFolder(*)', downloadController.getByVirtualFolder.bind(downloadController));
 
 router.post('/move/:tenantId', express.json(), moveController.moveFile.bind(moveController));
+
+router.delete('/:tenantId/:virtualPath(*)', deleteController.deleteFile.bind(deleteController));
 
 router.use(errorHandler);
 
